<resources>
    <string name="app_name">SimplyTapp Android Sample</string>

    <string name="api_key">29d210d670e008842aa9b4cdd7c80120</string>

    <string name="button_title_check_weather">Check Weather</string>
    <string name="label_first_city">First City</string>
    <string name="label_second_city">Second City</string>
    <string name="label_latitude">Latitude</string>
    <string name="label_longitude">Longitude</string>

    <string name="weather_report_more">%1$s has %2$d hours, %3$d minutes, %4$d seconds more sun than %5$s</string>
    <string name="weather_report_less">%1$s has %2$d hours, %3$d minutes, %4$d seconds less sun than %5$s</string>
    <string name="weather_report_equal">%1$s and %2$s have equal amounts of sunshine</string>

    <string name="error_weather_service">There was a problem with data returned from the server. Please check your latitude and longitude values or try again later.</string>
    <string name="error_missing_latitude">Please enter a value for latitude</string>
    <string name="error_missing_longitude">Please enter a value for longitude</string>
</resources>