<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SampleActivity">

    <TextView
        android:id="@+id/first_city_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:text="@string/label_first_city"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/first_latitude_text_input"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/first_latitude_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:nextFocusForward="@+id/first_longitude_edit_text"
                android:nextFocusDown="@+id/first_longitude_edit_text"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/label_latitude"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/first_longitude_text_input"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@id/first_longitude_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:nextFocusForward="@+id/second_latitude_edit_text"
                android:nextFocusDown="@+id/second_latitude_edit_text"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/label_longitude"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/second_city_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:text="@string/label_second_city"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/second_latitude_text_input"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@id/second_latitude_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:nextFocusForward="@+id/second_longitude_edit_text"
                android:nextFocusDown="@+id/second_longitude_edit_text"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/label_latitude"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/second_longitude_text_input"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@id/second_longitude_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/label_longitude"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/check_weather_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/colorAccent"
        android:textColor="@color/buttonForeground"
        android:text="@string/button_title_check_weather"/>

    <TextView
        android:id="@+id/weather_report_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@android:style/Widget.ProgressBar.Small"
        android:visibility="gone"/>

</LinearLayout>
